--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,20 @@
-html, body {
+html,
+body {
   background: black;
   color: #00b800;
-  margin:0;
+  margin: 0;
   padding: 0;
   padding-top: 10px;
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   text-align: center;
 }
 
 body {
-  font-weight: 400;
+  font-weight: 800;
 }
 
 button {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   display: block;
   margin: 0 auto;
   border: none;
@@ -25,11 +26,14 @@ button {
 
 h1 {
   font-size: 20px;
-  text-align:center;
+  text-align: center;
+}
+button:disabled {
+  cursor: not-allowed;
 }
 
 textarea {
-  font-family: 'Press Start 2P', cursive;
+  font-family: "Press Start 2P", cursive;
   border: 3px solid black;
   width: 90%;
   margin: 0 auto;
@@ -37,4 +41,8 @@ textarea {
   height: 200px;
   background: #00b800;
   padding: 10px;
+}
+
+textarea:disabled {
+  background-color: #a5a2a2;
 }
